--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,23 @@
 == README
 
+testing specs for recipes
+
+name: string
+summary: text
+description:text
+
+- name must be present
+- name must between 5 and 100 characters
+- summary must be present
+- summary must be between 10 character and less than 150 characters
+- Description must be present
+- description must be between 20 and 500 characters
+- chef_id must be present
 
 
+
+
+ensure validations
 
 
 _________________________________
